--- a/client/styles.css
+++ b/client/styles.css
@@ -1,24 +1,162 @@
+@import url('https://fonts.googleapis.com/css?family=Kalam&display=swap');
+
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: #e4def6;
+  font-family: 'Avenir', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
+    sans-serif;
+  background-color: #fff;
+  background-image: url('https://wallpapercave.com/wp/wp7355566.jpg');
+  background-size: cover;
+  background-attachment: fixed;
+  width: 900px;
+  margin: 0 auto;
+  color: #333;
 }
+
+a {
+  text-decoration: none;
+}
+
+h1 {
+  color: white;
+  font-family: Kalam, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
+    sans-serif;
+  font-size: 70px;
+  font-weight: bolder;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100px;
+  padding: 10px;
+}
+
 .book {
-  width: 300px;
   height: 150px;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.85);
   text-align: center;
+  padding: 20px;
+  border-radius: 10px;
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.booktitle {
+  height: 60px;
+  font-size: 22px;
+  font-weight: bolder;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.bookauthor {
+  height: 50px;
+  vertical-align: middle;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.bookbuttons {
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.booklist {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.bookcreator {
+  background-color: rgba(255, 255, 255, 0.85);
   padding: 20px;
   border-radius: 10px;
   margin: 10px;
 }
 
-.booklist {
+.quotelist {
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
+  flex-direction: column;
+  align-items: center;
 }
 
-h3 {
-  font-size: 20px;
-  font-weight: bolder;
+.quote {
+  width: 840px;
+  background-color: rgba(255, 255, 255, 0.85);
+  text-align: left;
+  padding: 10px 20px 20px 20px;
+  border-radius: 10px;
+  margin: 10px;
+}
+
+.quotetext {
+  margin-bottom: 5px;
+}
+
+.pagenumber {
+  font-style: italic;
+  color: #aaa;
+  line-height: 0;
+}
+
+.quotedeletebutton {
+  display: flex;
+  justify-content: right;
+}
+
+button {
+  padding: 5px 10px 5px 10px;
+  border-radius: 5px;
+  display: block;
+}
+
+.deletebutton {
+  height: 30px;
+  border: rgb(255, 70, 70) 1px solid;
+  color: rgb(255, 70, 70);
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.deletebutton:hover {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.primarybutton {
+  height: 30px;
+  border: rgb(87, 45, 11) 1px solid;
+  background-color: rgb(87, 45, 11);
+  color: white;
+}
+
+.primarybutton:hover {
+  background-color: rgb(126, 91, 62);
+}
+
+.headerbutton {
+  background-color: rgba(255, 255, 255, 0.85);
+  color: rgb(87, 45, 11);
+  border: rgb(87, 45, 11) 1px solid;
+  padding: 10px 15px 10px 15px;
+  font-weight: bold;
+  font-size: 15px;
+}
+
+#backheaderbutton {
+  border: rgb(255, 70, 70) 1px solid;
+  color: rgb(255, 70, 70);
+}
+
+.headerbuttonholder {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-around;
+  align-items: flex-end;
 }
