--- a/client/styles.css
+++ b/client/styles.css
@@ -46,8 +46,8 @@ h1 {
 
 .booktitle {
   height: 60px;
-  font-size: 22px;
-  font-weight: bolder;
+  font-size: 24px;
+  font-weight: 1000;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -87,6 +87,31 @@ h1 {
   align-items: center;
 }
 
+.quotebook {
+  width: 840px;
+  background-color: rgba(87, 45, 11, 0.85);
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 20px 0px 20px;
+  border-radius: 10px;
+  margin: 10px;
+}
+
+.quotebooktitle {
+  width: 550px;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.quotebookauthor {
+  text-align: right;
+  width: 300px;
+  font-size: 18px;
+  font-style: italic;
+}
+
 .quote {
   width: 840px;
   background-color: rgba(255, 255, 255, 0.85);
@@ -94,15 +119,36 @@ h1 {
   padding: 10px 20px 20px 20px;
   border-radius: 10px;
   margin: 10px;
+  background-image: url('https://www.clker.com/cliparts/M/g/I/a/E/v/grey-quotation-marks-hi.png');
+  background-size: 40px;
+  background-repeat: no-repeat;
+  background-position-x: 820px;
+  background-position-y: 15px;
+  color: #aaa;
+}
+
+.note {
+  width: 840px;
+  background-color: rgba(229, 218, 203, 0.85);
+  text-align: left;
+  padding: 10px 20px 20px 20px;
+  border-radius: 10px;
+  margin: 10px;
+  background-image: url('https://www.clipartmax.com/png/full/108-1084950_medicinal-clipart-case-presentation-document-flat-white-icon-png.png');
+  background-size: 25px;
+  background-repeat: no-repeat;
+  background-position-x: 834px;
+  background-position-y: 15px;
+  color: rgb(87, 45, 11);
 }
 
 .quotetext {
   margin-bottom: 5px;
+  color: #333;
 }
 
 .pagenumber {
   font-style: italic;
-  color: #aaa;
   line-height: 0;
 }
 
